# AirplaneArrivalModel

./: CMakeLists.txt  LICENSE  README.md  data.csv  display.cpp  display.h  display.hpp  func.cpp  func.h  func.hpp  jottoku_report_last.docx  main.cpp  main.h  main.hpp  method.cpp  struct.cpp  struct.h  struct.hpp
